// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The value page should render the same based on URL parameters for honor 1`] = `
<div>
  <div
    class="css-1vog6cq"
  >
    <h1
      class="css-1t3tbq3"
    >
      Reflection: 
      Honor
    </h1>
    <div
      class="css-1yazsj0"
      data-testid="styled-box"
    >
      <h2>
        Army
      </h2>
      <p>
        Live up to Army values [...] Honor is a matter of carrying out, acting, and living the values of respect, duty, loyalty, selfless service, integrity and personal courage in everything you do.
      </p>
    </div>
    <div
      class="css-1yazsj0"
      data-testid="styled-box"
    >
      <h2>
        Marines / Navy
      </h2>
      <p>
        The quality of maturity, dedication, trust, and dependability that commits Marines to act responsibly; to be accountable for actions; to fulfill obligations; and to hold others accountable for their actions.
      </p>
    </div>
    <textarea
      class="css-21ory"
      placeholder="What does honor mean to you?"
    />
    <button
      class="css-1ygofzf"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`The value page should render the same based on URL parameters for integrity 1`] = `
<div>
  <div
    class="css-1vog6cq"
  >
    <h1
      class="css-1t3tbq3"
    >
      Reflection: 
      Integrity
    </h1>
    <div
      class="css-1yazsj0"
      data-testid="styled-box"
    >
      <h2>
        U.S. Air Force
      </h2>
      <p>
        Integrity is the adherence to a strong moral code and consistency in one’s actions and values [...] Airmen should be guided by a deeply held sense of honor, not one of personal comfort or uncontrolled selfish appetites.
      </p>
    </div>
    <div
      class="css-1yazsj0"
      data-testid="styled-box"
    >
      <h2>
        U.S. Army
      </h2>
      <p>
        Do what’s right, legally and morally. Integrity is a quality you develop by adhering to moral principles. It requires that you do and say nothing that deceives others. As your integrity grows, so does the trust others place in you […] and, finally, the fundamental acceptance of yourself.
      </p>
    </div>
    <div
      class="css-1yazsj0"
      data-testid="styled-box"
    >
      <h2>
        U.S. Coast Guard
      </h2>
      <p>
        Integrity is our standard. We demonstrate uncompromising ethical conduct and moral behavior in all of our personal actions. We are loyal and accountable to the public trust.
      </p>
    </div>
    <textarea
      class="css-21ory"
      placeholder="What does integrity mean to you?"
    />
    <button
      class="css-1ygofzf"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`The value page should render the same based on URL parameters for loyalty 1`] = `
<div>
  <div
    class="css-1vog6cq"
  >
    <h1
      class="css-1t3tbq3"
    >
      Reflection: 
      Loyalty
    </h1>
    <div
      class="css-1yazsj0"
      data-testid="styled-box"
    >
      <h2>
        U.S. Army
      </h2>
      <p>
        Bear true faith and allegiance to the U.S. Constitution, the Army, your unit and other Soldiers. Bearing true faith and allegiance is a matter of believing in and devoting yourself to something or someone … By wearing the uniform of the U.S. Army you are expressing your loyalty. And by doing your share, you show your loyalty to your unit.
      </p>
    </div>
    <textarea
      class="css-21ory"
      placeholder="What does loyalty mean to you?"
    />
    <button
      class="css-1ygofzf"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`The value page should render the same based on URL parameters for respect 1`] = `
<div>
  <div
    class="css-1vog6cq"
  >
    <h1
      class="css-1t3tbq3"
    >
      Reflection: 
      Respect
    </h1>
    <div
      class="css-1yazsj0"
      data-testid="styled-box"
    >
      <h2>
        Army
      </h2>
      <p>
        Treat people as they should be treated [...] Respect is what allows us to appreciate the best in other people. Respect is trusting that all people have done their jobs and fulfilled their duty.
      </p>
    </div>
    <textarea
      class="css-21ory"
      placeholder="What does respect mean to you?"
    />
    <button
      class="css-1ygofzf"
    >
      Save
    </button>
  </div>
</div>
`;
